# RobProg

./: CMakeLists.txt  README.md  package.xml
MRS/: package.xml
MRS/config/: sim_config.yaml
MRS/include/multi_robot_simulator/: robot.h  simulator.h
MRS/launch/: navigation.launch  start_simulation.launch
MRS/maps/: my_map.yaml
MRS/param/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
MRS/src/: simulator_node.cpp
config/: MRS.rviz  sim_config.yaml
include/multi_robot_simulator/: robot.h  simulator.h
launch/: start_simulation.launch  test_map.launch  test_robot1.launch  test_robot2.launch
maps/: my_map.yaml
param/: amcl_robot1.yaml  amcl_robot2.yaml  base_local_planner_params.yaml  costmap_common_params_robot1.yaml  costmap_common_params_robot2.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/: simulator_node.cpp
