<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_simulator</name>
  <version>0.1.0</version>
  <description>A simple 2D multi-robot simulator for ROS</description>

  <maintainer email="tuamail@example.com">Il Tuo Nome</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv4</depend>

</package>